# refract

./: .gitignore  .mcp.example.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: README.md
.github/workflows/: ci.yml
docs/: adding-a-language.md  design.md  roadmap.md
docs/research/: 00-evaluation-rubric.md  01-prior-session-digest.md  02-codebase-anatomy-and-op-pool.md  03-external-landscape.md  04-multisurface-prior-art.md  05-strategy-design-space.md  06-oppool-brief.md  07-bakeoff-yaml.md  08-bakeoff-python-descriptor.md  09-bakeoff-openapi-and-runtime.md  10-synthesis-and-adversarial-review.md  11-testgen-stack.md  12-architecture-language-agnostic.md  13-openapi-interop.md  14-refract-design-spec.md  15-refract-spec-frozen.md  16-stress-test-synthesis.md  README.md  _openapi_issues_create_extended.yaml  _openapi_issues_create_pure.yaml
docs/research/stress/: aws-s3.md  elasticsearch.md  github-rest.md  google-calendar.md  graphql.md  kubernetes.md  notion.md  openai.md  slack.md  stripe.md  twilio.md  yandex-360-core.md  yandex-360-other.md  yandex-cloud.md
docs/superpowers/plans/: 2026-07-14-refract-a2-priorities-body-registry.md  2026-07-14-refract-architecture-redesign.md  2026-07-14-refract-me-walking-skeleton.md  2026-07-18-refract-p0-debt-zero.md  2026-07-18-refract-p1-type-foundation.md
docs/superpowers/plans/drafts/: 2026-07-18-milestone-deferred-Dplus-backlog-DRAFT.md  2026-07-18-milestone-openapi-frontend-DRAFT.md  2026-07-18-milestone-public-packaging-DRAFT.md  2026-07-18-milestone-typescript-backend-DRAFT.md  2026-07-18-milestone-ycli-integration-DRAFT.md
docs/superpowers/specs/: 2026-07-14-refract-architecture-redesign-design.md  2026-07-18-refract-diversity-axes-design.md
examples/ycli-tracker/: _auth.yaml  client.yaml
examples/ycli-tracker/golden/tests/tracker/: test_me.py
examples/ycli-tracker/golden/tracker/me/: cli.py
examples/ycli-tracker/golden/tracker/priorities/: client.py
examples/ycli-tracker/tracker/me/: resource.yaml
examples/ycli-tracker/tracker/priorities/: resource.yaml
references/: README.md
references/yandex-360/: README.md
refract/: __init__.py  cli.py  generate.py  loader.py
refract/emitters/python/: _common.py  client.py  mcp.py  models.py
refract/ir/: model.py
scripts/: fetch_docs.py
src/refract/: __init__.py  cli.py  format.py  generate.py  generation.py
src/refract/emitters/: __init__.py  api.py  ports.py  registry.py
src/refract/emitters/python/: __init__.py  backend.py  cli.py  doc_comments.py  docstrings.py  environment.py  file_layout.py  format.py  layout.py  naming.py  resolve.py  templating.py  tests.py  types.py  views.py
src/refract/emitters/python/resolve/: __init__.py  _common.py  cli.py  client.py  mcp.py  models.py  requests.py  root_client.py  tests.py
src/refract/emitters/python/surfaces/: cli.py  client.py  mcp.py  models.py  package.py  requests.py  root_client.py  shared_models.py  tests.py
src/refract/emitters/python/templates/: _module.jinja  cli.jinja  client.jinja  mcp.jinja  models.jinja  requests.jinja  root_client.jinja  tests.jinja
src/refract/ir/: __init__.py  auth.py  client.py  model.py  types.py
src/refract/runtime/: __init__.py  auth.py  base.py  request.py  session.py
src/refract/spec/: __init__.py  loader.py  nodes.py  schema.py
tests/: conftest.py  test_cli.py  test_emit_cli.py  test_emit_client.py  test_emit_mcp.py  test_emit_models.py  test_emit_priorities_client.py  test_emit_priorities_mcp.py  test_emit_priorities_models.py  test_emit_tests.py  test_generate.py  test_generate_priorities.py  test_generation.py  test_ir.py  test_loader.py  test_loader_lowering.py  test_loader_priorities.py  test_smoke.py  test_snapshot_out.py  test_snapshot_valid_python.py  test_version.py
tests/behavioral/: test_d_core_runs.py  test_discriminator_synthesis.py  test_format_coercion.py  test_nested_ref_test_imports.py
tests/emitters/: test_api.py  test_assembled_cli.py  test_ports.py  test_registry.py  test_resolve_bodyless.py  test_resolve_tests_multiop.py  test_surface_gating.py
tests/emitters/python/: test_backend.py  test_doc_comments.py  test_docstrings.py  test_environment.py  test_file_layout.py  test_format.py  test_layout.py  test_module_template.py  test_naming.py  test_resolve.py  test_templating.py  test_types.py
tests/emitters/python/surfaces/: test_cli.py  test_client.py  test_mcp.py  test_models.py  test_package.py  test_requests.py  test_root_client.py  test_shared_models.py  test_tests.py
tests/ir/: test_auth.py  test_client.py  test_init.py  test_model.py  test_types.py
tests/runtime/: test_auth.py  test_base.py  test_request.py  test_session.py
tests/spec/: test_loader.py  test_neutral_parse.py  test_nodes.py  test_schema.py
