[project]
name = "refract"
version = "0.0.0"
description = "Language-agnostic, spec-driven generator: one neutral API spec → typed IR → per-(language×surface) emitters (client/CLI/MCP/models/tests) + OpenAPI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Sava Znatnov", email = "careless.sava@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
]

[project.scripts]
refract = "refract.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=refract --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["refract"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["refract", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF", "ANN", "TC"]
ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["refract"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "ANN"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
